# HSG

./: CMakeLists.txt
assimp-5.2.4/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters  cmake_install.cmake
assimp-5.2.4/contrib/zlib/: CTestTestfile.cmake  cmake_install.cmake
fab/: factory.h
gl3w/: CMakeLists.txt
glfw3/: CMakeLists.txt
glfw3/src/: CMakeLists.txt
glfw3/win32/: context.c  internal.h  win32_window.c
imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp
imgui/examples/example_glfw_opengl3/: imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
imgui/examples/example_glfw_opengl_es/: imgui_impl_glfw_opengl_es.cpp
lua/: CMakeLists.txt
soil/: CMakeLists.txt
vg/: CMakeLists.txt
vg/components/include/: afb_load.h  afb_output.h  afb_res_index.h  alias.h  bin_format.h  bind.h  common_functions.h  common_value.h  common_value_edit.h  cp_bind.h  cp_factory.h  cp_feedback.h  cp_font_res_set.h  cp_model.h  cp_state_manager.h  cp_timer.h  file_chunk.h  file_chunk_container.h  font.h  font_manager.h  material.h  material_container.h  model.h  packing_texture.h  packing_texture_container.h  packing_texture_draw.h  playlist_group.h  primitive.h  primitive_container.h  shader.h  shader_container.h  state_manager.h  timer.h  vertex.h  vertex_container.h  vg_texture.h
vg/components/source/: afb_load.cpp  afb_output.cpp  alias.cpp  application.cpp  bin_format.cpp  bind.cpp  common_functions.cpp  common_value.cpp  cp_bind.cpp  cp_feedback.cpp  cp_font_res_set.cpp  cp_playlist_group.cpp  cp_shader.cpp  cp_shader_source_code.cpp  cp_state_manager.cpp  cp_timer.cpp  dir_output.cpp  file_chunk.cpp  file_chunk_container.cpp  font_manager.cpp  hsb_load.cpp  lua_interpreter.cpp  material.cpp  materil_container.cpp  model.cpp  packing_texture.cpp  packing_texture_container.cpp  packing_texture_draw.cpp  playlist_group.cpp  primitive.cpp  primitive_container.cpp  screen_image_distortion.cpp  screen_image_distortion.h  shader.cpp  shader_container.cpp  state_manager.cpp  timer.cpp  vertex.cpp  vertex_container.cpp  vg_texture.cpp
vg/controls/include/: a_texture_node.h  block.h  button.h  circle.h  color_node.h  control_def.h  control_fac.h  cube_3d.h  hud_3_time_curve_3d.h  hud_obj_3d.h  hud_projector.h  image.h  image_file.h  image_play.h  light_scene.h  listbox_ex.h  material_2d.h  material_3d.h  model_3d.h  modeling_3d.h  plot_lines.h  polygon_image.h  property_utilities.h  quad_image.h  quad_time_curve_3d.h  scene.h  slider.h  slider_thumb.h  textblock.h  trans.h  transform.h  transformation.h  vg.h  vg_factory.h  vg_type.h  video.h
vg/controls/source/: a_texture_node.cpp  block.cpp  button.cpp  circle.cpp  color_node.cpp  control_common_def.cpp  ctl_cube_3d.cpp  ctl_essay.cpp  ctl_essay.h  ctl_hud_3_time_curve_3d.cpp  ctl_hud_obj_3d.cpp  ctl_hud_projector.cpp  ctl_image_file.cpp  ctl_image_play.cpp  ctl_listbox.cpp  ctl_listbox_ex.cpp  ctl_logo_animation.cpp  ctl_material_2d.cpp  ctl_material_3d.cpp  ctl_model_3d.cpp  ctl_modeling_3d.cpp  ctl_paragraph.cpp  ctl_paragraph.h  ctl_plane_3d.cpp  ctl_plane_play_2d.cpp  ctl_polygon_image.cpp  ctl_quad_image.cpp  ctl_scene.cpp  ctl_sentence.cpp  ctl_sentence.h  ctl_slider.cpp  ctl_slider_thumb.cpp  ctl_sphere_3d.cpp  ctl_textblock.cpp  ctl_trajectory_box_3d.cpp  ctl_trans.cpp  ctl_video.cpp  hud_3_time_curve_3d.cpp  hud_obj_3d.cpp  hud_projector.cpp  (+20 more)
vg/ide/: afb_load.cpp  aliase_edit.cpp  aliase_edit.h  bind_edit.cpp  bind_edit.h  common_value_edit.cpp  common_value_edit.h  dir_output.cpp  dir_output.h  file_res_edit.cpp  fonts_edit.cpp  main.cpp  material_shader_edit.cpp  model_edit.cpp  model_edit.h  playlist_group_edit.cpp  playlist_group_edit.h  primitve_edit.cpp  primitve_edit.h  project_edit.cpp  project_edit.h  res_edit.cpp  res_internal.cpp  res_internal.h  rescontainer_manager.cpp  rescontainer_manager.h  resource_manager.h  slider_path_picker.cpp  slider_path_picker.h  state_manager_edit.cpp  state_manager_edit.h  texture_edit.cpp  texture_res_load.cpp  texture_res_load.h  ui_assembler.cpp  ui_assembler.h  unreferenced_items.cpp  user_control_imgui.cpp  user_control_imgui.h  video_capture.cpp  (+2 more)
vg/ide/components/: dragging_value_to_tar.cpp  dragging_value_to_tar.h  edit_interface.h  file_chunk_ide.cpp  file_chunk_ide.h  file_chunk_json.cpp  file_chunk_json.h  file_chunk_msgpack_c.cpp  file_chunk_msgpack_c.h  font_json.cpp  font_json.h  font_msgpack_c.cpp  font_msgpack_c.h  hsb_output.cpp  hsb_output.h  ide_common_functions.cpp  ide_common_functions.h  material_ide.cpp  material_ide.h  material_json.cppb  material_json.h  msgpack_c_op.h  packing_texture_ide.cpp  packing_texture_ide.h  packing_texture_json.cpp  packing_texture_json.h  packing_texture_msgpack_c.cpp  packing_texture_msgpack_c.h  primitive_ide.h  shader_ide.cpp  shader_ide.h  vertex_ide.cpp  vertex_ide.h  vg_texture_json.cpp  vg_texture_json.cppb  vg_texture_json.h  vg_texture_msgpack_c.h
vg/ide/controls/: a_texture_node_ide.cpp  circle_ide.cpp  color_node_ide.cpp  control_def_ide.cpp  control_def_ide.h  hud_projector_ide.cpp  image_file_ide.cpp  image_play_ide.cpp  light_scene_ide.cpp  listbox_ex_ide.cpp  material_2d_ide.cpp  material_3d_ide.cpp  modeling_3d_ide.cpp  polygon_image_ide.cpp  pot_lines_ide.cpp  quad_image_ide.cpp  scene_ide.cpp  slider_ide.cpp  textblock_ide.cpp  transform_ide.cpp  transformation_ide.cpp
vg2/: CMakeLists.txt
vg2/components/include/: alias.h  bind_base.h  common_functions.h  common_value.h  font.h  font_manager.h  hsb_load.h  macro_tool.h  material.h  material_container.h  packing_texture_draw.h  (+8 more)
vg2/ide/: dir_output.cpp  dir_output.h
(+82 files in other folders)
