set(IMGUI imgui.cpp imgui_draw.cpp)
include_directories(misc/freetype)
if(GLFW_WINDOWS)
  include_directories(examples/example_glfw_opengl3)
  set(IMGUI_IMPL examples/example_glfw_opengl3/imgui_impl_glfw_gl3.cpp)
else()
  include_directories(examples/example_glfw_opengl_es)
  set(IMGUI_IMPL examples/example_glfw_opengl_es/imgui_impl_glfw_opengl_es.cpp)
endif()
add_library(imgui ${IMGUI} ${IMGUI_IMPL})